[package]
name = "pollen"
version = "0.1.0"
edition = "2024"

[dependencies]
htmd = "0.5.4"
reqwest = { version = "0.13.2", features = ["blocking"] }
scraper = "0.26.0"
regex = "1.12.3"
itertools = "0.14.0"
rumqttc = "0.25.1"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
